[gd_scene load_steps=21 format=3 uid="uid://c72gqv65bj0w2"]

[ext_resource type="Script" path="res://scripts/level_interface.gd" id="1_47joq"]
[ext_resource type="Texture2D" uid="uid://b5h8ofbfo1ib1" path="res://assets/UI assets/help_background.png" id="1_dppv8"]
[ext_resource type="Texture2D" uid="uid://bjoly8asymwy7" path="res://assets/UI assets/basic_domino_inventory.png" id="2_02cy4"]
[ext_resource type="Texture2D" uid="uid://cmeq8vftejiip" path="res://assets/UI assets/heavy_domino_inventory.png" id="3_fy25v"]
[ext_resource type="Texture2D" uid="uid://cs838t14gb7pg" path="res://assets/UI assets/jumping_domino_inventory.png" id="4_dcvl1"]
[ext_resource type="Texture2D" uid="uid://dpklmuiiffalo" path="res://assets/UI assets/help_button.png" id="5_mswf8"]
[ext_resource type="Texture2D" uid="uid://p8v34f2hcfqs" path="res://assets/UI assets/mouse_icon.png" id="7_tfe8x"]
[ext_resource type="Texture2D" uid="uid://ci2x2x5rywm04" path="res://assets/UI assets/exit_button.png" id="8_fkluo"]
[ext_resource type="Texture2D" uid="uid://chopq6wk26b1q" path="res://assets/UI assets/play_button.png" id="9_gx0b8"]
[ext_resource type="Texture2D" uid="uid://crhmhhmb4gy2q" path="res://assets/UI assets/reset_button.png" id="10_yaxxg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_igoni"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_dppv8")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2bj2y"]
atlas = ExtResource("5_mswf8")
region = Rect2(0, 0, 0, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxvn7"]
atlas = ExtResource("5_mswf8")
region = Rect2(0, 16, 0, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23oco"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_me2yw"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_dppv8")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_84hfc"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("1_dppv8")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
modulate_color = Color(0.386251, 0.386251, 0.386251, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wil7"]
atlas = ExtResource("9_gx0b8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpgmg"]
atlas = ExtResource("9_gx0b8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyhka"]
atlas = ExtResource("10_yaxxg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88pqf"]
atlas = ExtResource("10_yaxxg")
region = Rect2(0, 32, 32, 32)

[node name="levelInterface" type="CanvasLayer"]
script = ExtResource("1_47joq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -175.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_igoni")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Normal Domino Container" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("2_02cy4")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "X"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="normalDominoCountLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Normal Domino Container/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "-1"
horizontal_alignment = 1

[node name="Heavy Domino Container2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_fy25v")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "X"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="heavyDominoCountLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Heavy Domino Container2/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "-1"
horizontal_alignment = 1

[node name="Jumping Domino Container3" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_dcvl1")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "X"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="jumpingDominoCountLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Jumping Domino Container3/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "-1"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="helpButton" type="TextureButton" parent="MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_2bj2y")
texture_pressed = SubResource("AtlasTexture_jxvn7")
stretch_mode = 5

[node name="helpContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -199.5
offset_right = 90.0
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_igoni")

[node name="MarginContainer" type="MarginContainer" parent="helpContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="helpContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="helpContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("2_02cy4")
expand_mode = 5

[node name="Label" type="Label" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Normal Domino: Falls forward and hits first object in path"

[node name="HBoxContainer2" type="HBoxContainer" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/MarginContainer4"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_fy25v")
expand_mode = 5

[node name="Label" type="Label" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Heavy Domino: Requires 2 dominos or 
another heavy domino to fall"

[node name="HBoxContainer3" type="HBoxContainer" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="TextureRect" type="TextureRect" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/MarginContainer5"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_dcvl1")
expand_mode = 5

[node name="Label" type="Label" parent="helpContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Jumping Domino: Hits object at twice the distance of a 
normal domino"

[node name="MarginContainer" type="MarginContainer" parent="helpContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_23oco")

[node name="Label" type="Label" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Place"

[node name="PanelContainer2" type="PanelContainer" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_23oco")

[node name="Label" type="Label" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Rotate"

[node name="PanelContainer3" type="PanelContainer" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_23oco")

[node name="Label" type="Label" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer3"]
layout_mode = 2
text = "Remove"

[node name="TextureRect" type="TextureRect" parent="helpContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
texture = ExtResource("7_tfe8x")
expand_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="menuButton" type="Button" parent="MarginContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxTexture_me2yw")
theme_override_styles/hover = SubResource("StyleBoxTexture_84hfc")
theme_override_styles/normal = SubResource("StyleBoxTexture_me2yw")
icon = ExtResource("8_fkluo")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer4" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer4"]
layout_mode = 2

[node name="playButton" type="TextureButton" parent="MarginContainer4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_1wil7")
texture_pressed = SubResource("AtlasTexture_kpgmg")
stretch_mode = 5

[node name="resetButton" type="TextureButton" parent="MarginContainer4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_oyhka")
texture_pressed = SubResource("AtlasTexture_88pqf")
stretch_mode = 5
